# africastalking-rust

./: .gitignore  .travis.yml  Cargo.toml  README.md  index.html  search-index.js
africastalking_gateway/: AfricasTalkingGateway.t.html  Apikey.t.html  SMSMessage.t.html  enum.ErrorKind.html  index.html  sidebar-items.js  struct.AfricasTalkingGateway.html  struct.Apikey.html  struct.Error.html  struct.SMSMessage.html  trait.ResultExt.html  type.Result.html
crc/crc32/: constant.CASTAGNOLI.html  constant.CASTAGNOLI_TABLE.html  constant.IEEE.html  constant.IEEE_TABLE.html  constant.KOOPMAN.html  constant.KOOPMAN_TABLE.html
crc/crc64/: constant.ECMA.html  constant.ECMA_TABLE.html  constant.ISO.html  constant.ISO_TABLE.html
error_chain/: struct.Iter.html
examples/: b2bpayment.rs  b2cpayment.rs  fetchmsg.rs  makevoicecall.rs  sendairtime.rs  sendmsg.rs  userdata.rs
implementors/africastalking_gateway/: trait.ResultExt.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.AsRef.js  trait.From.js  trait.Into.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Send.js  trait.Sync.js
implementors/error_chain/: trait.ChainedError.js
src/: lib.rs
src/africastalking_gateway/: lib.rs.html
src/crossbeam_utils/: cache_padded.rs.html  lib.rs.html  scoped.rs.html
src/slab/: lib.rs.html
(+12 files in other folders)
