[package]
name = "africastalking_gateway"
version = "0.1.0"
authors = ["Matt Gathu <mattgathu@gmail.com>", "Brian Orwe <brian.orwe@gmail.com>"]

description = "A Rust library for communicating with the Africa's Talking REST API."
documentation = "https://docs.rs/africastalking_gateway"
homepage = "https://github.com/rust-nairobi/africastalking-rust"
repository = "https://github.com/rust-nairobi/africastalking-rust"
readme = "README.md"
keywords = ["gateway", "sms", "voice", "payment"]
categories = ["api-bindings"]
license = "MIT"

[badges]
travis-ci = { repository = "rust-nairobi/africastalking-rust"}

[dependencies]
reqwest = { version = "0.11", features = ["json","blocking"] }
serde = "1.0.37"
serde_derive = "1.0.37"
serde_json = "1.0"
error-chain = "0.11.0"
